<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ResetPassword">

    <View
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/ic_wave__1_"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/blueWhite"
        android:layout_gravity="center"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/strock_edit"
        android:padding="10dp"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="5dp"
        android:hint="@string/email"
        android:layout_marginTop="30dp"
        android:id="@+id/resetEmail"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="100dp"
        android:background="@drawable/strock_btn"
        app:backgroundTint="@color/blueWhite"
        android:id="@+id/resetButton"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/footer"/>
</LinearLayout>