<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChatActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:padding="10dp"
            android:id="@+id/chatArrowBack"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:padding="9dp"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:layout_marginStart="10dp"
            android:id="@+id/chatOtherUserName"/>

    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/chatRecyclerView"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"

        android:background="#D8D8D8">

        <EditText
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:background="@color/white"
            android:hint="@string/your_message"
            android:padding="15dp"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:id="@+id/chatMessageEditTxt"/>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_send_24"
            android:padding="10dp"
            android:backgroundTint="#E91E63"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:id="@+id/chatSendMessage"
            android:contentDescription="@string/sendmessage" />
    </LinearLayout>

</LinearLayout>